tests/type_errors/addition_is_restricted.sy
mod A

type A = foreign

def x
: A -> A
: a = a + a

